--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "d0e49b0a-adf9-4308-b188-123597f82d2f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
